# ArUcoPfe

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/praga/opencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/praga/opencv/: Calibration.java  Main3Activity.java  Transition.java
app/src/main/java/com/example/praga/opencv/Praga/: LockScreenReceiver.java  LockScreenService.java  Main2Activity.java  PasswordActi.java  PasswordSet.java
app/src/main/java/com/example/praga/opencv/Views/: Customeview.java
app/src/main/java/com/example/praga/opencv/Zouhir/: MainActivity.java  Make_pass.java  Onboard.java  Segmentation.java  Slider_Adapter.java  SplashScreen.java  safe_code.java
app/src/main/res/anim/: mytransition.xml
app/src/main/res/layout/: activity_calibration.xml  activity_genrateqr.xml  activity_main.xml  activity_main2.xml  activity_main3.xml  activity_make_pass.xml  activity_onboard.xml  activity_password.xml  activity_password_set.xml  activity_safe_code.xml  activity_splash_screen.xml  activity_transition.xml  slider_.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: paths.xml
app/src/test/java/com/example/praga/opencv/: ExampleUnitTest.java
